# shared_and_static

./: .clang-format  .gitignore  CMakeLists.txt  README.md
c++/vscode/: .clang-format
src/: CMakeLists.txt  dynamic.cpp  dynamic.h  main.cpp  static.cpp  static.h
